gen/24.1/rpk/rpk-registry-schema-create.adoc
= rpk registry schema create
:description: rpk registry schema create

Create a schema for the given subject.

This uploads a schema to the registry, creating the schema if it does not
exist. The schema type is detected by the filename extension: ".avro" or ".avsc"
for Avro and ".proto" for Protobuf. You can manually specify the type with the 
--type flag.

You may pass the references using the --reference flag, which accepts either a
comma separated list of <name>:<subject>:<version> or a path to a file. The file 
must contain lines of name, subject, and version separated by a tab or space, or 
the equivalent in json / yaml format.

EXAMPLES

Create a protobuf schema with subject 'foo':
  rpk registry schema create foo --schema path/to/file.proto

Create an avro schema, passing the type via flags:
  rpk registry schema create foo --schema /path/to/file --type avro

Create a protobuf schema that references the schema in subject 'my_subject', 
version 1:
  rpk registry schema create foo --schema /path/to/file.proto --references my_name:my_subject:1

== Usage

[,bash]
----
rpk registry schema create SUBJECT --schema {filename} [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for create.

|--references |string |Comma-separated list of references (name:subject:version) or path to reference file.

|--schema |string |Schema filepath to upload, must be .avro, .avsc, or .proto.

|--type |string |Schema type (avro,protobuf); overrides schema file extension.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--format |string |Output format (json,yaml,text,wide,help) (default "text").

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===